[metadata]
name = scrapy-seleniumbase
version = 0.0.1
description = Unofficial scrapy plugin for Seleniumbase
long_description = file: README.rst
url = https://github.com/dozymoe/scrapy-seleniumbase
author = Fahri Reza
author_email = dozymoe@gmail.com
license = BSD
project_urls =
    Bug Tracker = https://github.com/dozymoe/scrapy-seleniumbase/issues
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
install_requires =
    aiohttp
    aiohttp_socks
    scrapy
    yarl
